# mysqlbinlog-rs

./: Cargo.toml  README.md  config.toml
examples/: read_binlog_file.rs  sync_binlog_to_redis.rs
python/: main.py  mysqlbinlog.py
python/pyapp/: main.py
python/pylib/: mysqlbinlog.py
src/: lib.rs
src/rowevents/: descriptor.rs  descriptor_datetime.rs  descriptor_decimal.rs  event_header.rs  events.rs  mod.rs  parser.rs  reader.rs  stream.rs  value_type.rs
